2007-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c Set default length/filemark correctly.
	* man/xml-source/amanda.conf.5.xml: Document they are in kbytes.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c (do_sendpkt): Send packet if handle != NULL.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c, common-src/util.h, server-src/conffile.c,
	  server-src/diskfile.c: Keep different list for exclude file and list.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (read_file): Don't count first header twice.

2007-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Fix split-dump accounting.

2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Use prompt_in.

2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-chio.pl.in, changer-src/chg-iomega.pl.in,
	  changer-src/chg-rth.pl.in, dumper-src/gnutar.pl.in,
	  server-src/amoverview.pl.in, server-src/amstatus.pl.in,
	  server-src/amtoc.pl.in: Clean ENV and set PATH.

2006-12-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Don't repport error for many run in a day if
			       it's amflush.

2006-12-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (quote_string): Escape '\' character.

2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/display_commands.c: Send quoted text to amindexd.
	* recover-src/extract_list.c: Send quoted text to amindexd.
	* recover-src/set_commands.c: Send quoted text to amindexd.

2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-disk.sh.in: LASTSLOT in a changerfile for chg-disk.

2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Compilation fix.

2006-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/packet.c (pkt_init_empty): New function.