@@ -1,3 +1,6 @@
+2007-01-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/getconf.c: Fix segfault in parameter parsing.
+
 2007-01-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/conffile.c Set default length/filemark correctly.
 	* man/xml-source/amanda.conf.5.xml: Document they are in kbytes.
